feat: clean up and enable compiler preview features